# vendored-schemas

./: Cargo.toml  README.md  vendor.toml
.github/workflows/: ci.yml
proto-src-confluent/: Cargo.toml  README.md
proto-src-confluent/src/: lib.rs
proto-src-confluent/tests/: integration.rs
proto-src-google-type/: Cargo.toml  README.md  build.rs
proto-src-google-type/src/: lib.rs
proto-src-google-type/tests/: integration.rs
scripts/: sync.py  verify_version.py
testkit/: Cargo.toml
testkit/src/: lib.rs
